# f4sandbox

./: .gitignore  CMakeLists.txt  Client.sln  README.md
Client/: CMakeLists.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  NetCore.h  json.hpp
Client/common/include/: GamePtr.h  Hook.h
Code/Client/include/: Utils.hpp
Code/Client/src/: main.cpp
Code/Common/include/: GameAddr.hpp  GamePtr.hpp
Code/Common/src/: GamePtr.cpp
Code/Server/src/: main.cpp
Code/TestApp/: Main.cs
Common/: Common.vcxproj
TestApp/: Class1.cs  TestApp.csproj
client/common/: CMakeLists.txt
client/common/include/: Types.h  detours.h
client/common/src/: GamePtr.cpp
client/include/: helpers.h
client/src/: main.cpp
